[metadata]
name = rdga_4k
version = 1.0.0
author = Douglas Aquino, Filipe Verri
author_email = aquinordga@gmail.com, filipeverri@gmail.com
description = rdga_4k: random data generator algorithm for clustering 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://aquinordg.github.io/rdga_4k/
project_urls =
    Bug Tracker = https://github.com/aquinordg/rdga_4k/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
    scipy

[options.packages.find]
where = src
